#71 Upgrade Java to 25
- Add Java 25 toolchain to extension, service, and frontend build files
- Update sourceCompatibility/targetCompatibility to Java 25 via toolchain
- Configure explicit main class in springBoot {} for service and frontend
  (Spring Boot's bytecode scanner doesn't support Java 25 class files yet)
- Update CI workflows to use Java 25 (via OpenRewrite)
- Apply OpenRewrite Java 25 migration recipe changes

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>